<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memory Vault</string>
    <string name="action_settings">Settings</string>
    <string name="actions_add_memory">Add Memory</string>
    <string name="list_item_title">Memory Name</string>
    <string name="list_item_location">Location</string>
    <string name="list_item_guest_count">Guest count</string>
    <string name="action_save_memory">Save Memory</string>
    <string name="label_location_hint">Event Location</string>
    <string name="label_location">Location:</string>
    <string name="label_notes">Notes:</string>
    <string name="label_notes_hint">Enter notes here...</string>
    <string name="label_new_event">New Event</string>
    <string name="label_event_name">Event Name:</string>
    <string name="label_event_name_hint">Event Name</string>
    <string name="label_num_guests">Guests:</string>
    <string name="label_num_guests_hint">Number of Guests</string>
    <string name="action_share">Share</string>
    <string name="action_discard">Discard</string>
    <string name="action_edit">Edit</string>
    <string name="cancel">Cancel</string>

</resources>
