<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_new_event"
        android:id="@+id/eventNameTV"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TableRow android:padding="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_num_guests"
                android:id="@+id/newGuestsLabel" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/label_num_guests_hint"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/guestsTV"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow android:padding="10dp" >
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_location"
                android:id="@+id/newLocationLabel" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/label_location_hint"
                android:id="@+id/locationTV"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow android:padding="10dp" >
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_notes"
                android:id="@+id/newNotesLabel" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/label_notes_hint"
                android:ems="10"
                android:id="@+id/notesTV"
                android:paddingLeft="5dp" />
        </TableRow>

    </TableLayout>

</LinearLayout>